# ayon-ui-qt

./: .gitignore  README.md  activity_panel.py  activity_stream.py  create_package.py  css_to_qss_converter.py  detail_panel.py  package.py  pyproject.toml  version.py
ayon_ui_qt/: __init__.py  activity_stream.py  ayon_style.json  ayon_style.py  buttons.py  comment.py  comments_panel.py  container.py  data_models.py  detail_panel.py  entity_path.py  frame.py  image_cache.py  label.py  panel.py  status_select.py  test_ayon_style.py  tester.py  text_box.py  user_image.py  utils.py
ayon_ui_qt/components/: buttons.py  combo_box.py  comment.py  comment_completion.py  container.py  entity_path.py  entity_thumbnail.py  frame.py  label.py  text_box.py  user_image.py
ayon_ui_qt/old/: root.css
ayon_ui_qt/old/output/: comment_editor.qss  (+4 more)
ayon_ui_qt/output/: comment_field.qss  complete_styles.qss  danger_button.qss  frame.qss  tertiary_button.qss  text_button.qss  tonal_button.qss
ayon_ui_qt/resources/: GetActivities-recieved-data.json  fake-project-data.json  sample_activities.json  sample_project_data.json
ayon_ui_qt/web_styles/: comment_editor_css.json  danger_button_css.json  frame_css.json  nav_button_css.json  surface_button_css.json  tertiary_button_css.json  text_button_css.json  tonal_button_css.json
client/: activity_panel.py  activity_stream.py  detail_panel.py  pyproject.toml
client/ayon_ui_qt/: __init__.py  addon.py  ayon_style.json  ayon_style.py  color_utils.py  tester.py  utils.py  variants.py  version.py
server/: __init__.py  settings.py
(+26 files in other folders)
