[project]
name = "ayon-ui-qt"
version = "0.1.0"
description = "A Qt Widget library based on AYON's React Component Library"
readme = "README.md"
requires-python = ">=3.9.1,<3.10"
dependencies = ["pyside6>=6.7.1", "qtpy>=2.3.1", "ruff>=0.11.4"]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "ayon_ui_qt/**/*" }]
include = [
    { path = "ayon_ui_qt/*.json", format = [
        "sdist",
        "wheel",
    ] },
    { path = "ayon_ui_qt/vendor/resources/*.*", format = [
        "sdist",
        "wheel",
    ] },
]
exclude = ["ayon_ui_qt/old"]
